// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NetworkLogo renders without error 1`] = `
<View
  style={
    {
      "borderBottomColor": "#131313",
      "borderBottomLeftRadius": 6,
      "borderBottomRightRadius": 6,
      "borderBottomWidth": 0,
      "borderLeftColor": "#131313",
      "borderLeftWidth": 0,
      "borderRightColor": "#131313",
      "borderRightWidth": 0,
      "borderStyle": "solid",
      "borderTopColor": "#131313",
      "borderTopLeftRadius": 6,
      "borderTopRightRadius": 6,
      "borderTopWidth": 0,
      "flexDirection": "column",
      "overflow": "hidden",
    }
  }
  testID="network-logo"
>
  <div
    className="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
    dir={null}
    style={
      {
        "height": "20px",
        "width": "20px",
      }
    }
  >
    <div
      className="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-ehq7j7"
      dir={null}
      suppressHydrationWarning={true}
    />
  </div>
</View>
`;

exports[`TransactionSummaryNetworkLogo renders without error 1`] = `
<View
  style={
    {
      "borderBottomColor": "#131313",
      "borderBottomLeftRadius": 6.8999999999999995,
      "borderBottomRightRadius": 6.8999999999999995,
      "borderBottomWidth": 1.5,
      "borderLeftColor": "#131313",
      "borderLeftWidth": 1.5,
      "borderRightColor": "#131313",
      "borderRightWidth": 1.5,
      "borderStyle": "solid",
      "borderTopColor": "#131313",
      "borderTopLeftRadius": 6.8999999999999995,
      "borderTopRightRadius": 6.8999999999999995,
      "borderTopWidth": 1.5,
      "flexDirection": "column",
      "overflow": "hidden",
    }
  }
  testID="network-logo"
>
  <div
    className="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
    dir={null}
    style={
      {
        "height": "20px",
        "width": "20px",
      }
    }
  >
    <div
      className="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-ehq7j7"
      dir={null}
      suppressHydrationWarning={true}
    />
  </div>
</View>
`;
